--- a/index.html
+++ b/index.html
@@ -213,11 +213,12 @@
           <li class="list-inline-item">
             <i><img  src="img/Baccarat.png" alt="Sergo's Photo" width="50" height="50"> Baccarat</i>
           </li>
+          <br>
           <li class="list-inline-item">
-            <i class="fab fa-react"></i>
+            <i><img  src="img/PGP.png" alt="Sergo's Photo" width="50" height="50"> Pai Gow Poker</i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
+            <i></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-sass"></i>
