name size new logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Sergo Mikirtumov</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -112,7 +112,7 @@
               </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Pittsburgh PA, <br>Februery 2010 - July 2014</span>
+            <span class="text-primary">Pittsburgh PA, <br>February 2010 - July 2014</span>
           </div>
         </div>
 
@@ -196,65 +196,52 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <!-- <div class="subheading mb-3">Programming Languages &amp; Tools</div> -->
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
-            <i><img  src="img/dice.png" alt="Sergo's Photo" width="50" height="50"> Craps</i>
+            <i><img  src="img/dice.png" alt="dice" width="60" height="60"> Craps</i>
           </li>
           <br>
           <li class="list-inline-item">
-            <i><img  src="img/roulette.png" alt="Sergo's Photo" width="50" height="50"> Roulette</i>
+            <i><img  src="img/AR.png" alt="roulette" width="60" height="60"> Roulette</i>
           </li>
           <br>
           <li class="list-inline-item">
-            <i><img  src="img/BlackJack.png" alt="Sergo's Photo" width="50" height="50"> Black Jack</i>
+            <i><img  src="img/BlackJack.png" alt="BlackJack" width="60" height="60"> Black Jack</i>
           </li>
           <br>
           <li class="list-inline-item">
-            <i><img  src="img/Baccarat.png" alt="Sergo's Photo" width="50" height="50"> Baccarat</i>
+            <i><img  src="img/Baccarat.png" alt="Baccarat" width="60" height="60"> Baccarat</i>
           </li>
           <br>
           <li class="list-inline-item">
-            <i><img  src="img/PGP.png" alt="Sergo's Photo" width="50" height="50"> Pai Gow Poker</i>
+            <i><img  src="img/paigow.png" alt="PaiGow" width="60" height="60"> Pai Gow Poker</i>
           </li>
           <li class="list-inline-item">
             <i></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
+            <i></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-less"></i>
+            <i></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
+            <i></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
+            <i></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
+            <i></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
+            <i></i>
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
+        <div class="subheading mb-3">Main Casino Carnival Games</div>
+        
       </div>
     </section>
 
