--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
             <p>...</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Tbilisi Georgia<br>September 2000 - May 2005</span>
+            <span class="text-primary">Tbilisi Georgia,<br>September 2000 - May 2005</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Casino Aragvi Training Schoole</h3>
+            <h3 class="mb-0">Casino Aragvi Training School</h3>
             <div class="subheading mb-3">Skills in dealing Roulette, Black Jack, Poker and other games
             </div>
             <p></p>
@@ -273,34 +273,34 @@
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
       <div class="view">
-        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(105).jpg" alt="First slide">
+        <img class="d-block w-50" src="img/CrapsCertificate.jpg" alt="First slide">
         <div class="mask rgba-black-light"></div>
       </div>
       <div class="carousel-caption">
-        <h3 class="h3-responsive">This is the first title</h3>
-        <p>First text</p>
+        <h3 class="h3-responsive"></h3>
+        <!-- <p>First text</p> -->
       </div>
     </div>
     <div class="carousel-item">
       <!--Mask color-->
       <div class="view">
-        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(115).jpg" alt="Second slide">
+        <img class="d-block w-50" src="img/MiniBaccaratCertificate.png" alt="Second slide">
         <div class="mask rgba-black-light"></div>
       </div>
       <div class="carousel-caption">
-        <h3 class="h3-responsive">Thir is the second title</h3>
-        <p>Secondary text</p>
+        <h3 class="h3-responsive"></h3>
+        
       </div>
     </div>
     <div class="carousel-item">
       <!--Mask color-->
       <div class="view">
-        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(108).jpg" alt="Third slide">
+        <img class="d-block w-50" src="img/PaiGoTrainingCertificate.jpg" alt="Third slide" style="width:100%">
         <div class="mask rgba-black-light"></div>
       </div>
       <div class="carousel-caption">
-        <h3 class="h3-responsive">This is the third title</h3>
-        <p>Third text</p>
+        <h3 class="h3-responsive"></h3>
+        
       </div>
     </div>
   </div>
