--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
+  <link href="css/resume.css" rel="stylesheet">
 
 </head>
 
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Mikirtumov Sergo</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="Sergo's Photo">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/SergoMM.jpg" alt="Sergo's Photo">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,8 +67,8 @@
           <span class="text-primary">Sergo</span>
         </h1>
         <div class="subheading mb-5">14 Stratford Apartments #7, NJ 08857
-          <a style="color: rgb(0, 76, 255);" href="tel:848-702-4494">848-702-4494</a>
-          <a href="mailto:name@email.com">mikirtumov@gmail.com</a>
+          <div class="telefon"><a href="tel:848-702-4494">848-702-4494</a></div>
+          <a href="mailto:mikirtumov@gmail.com">mikirtumov@gmail.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
@@ -169,17 +169,29 @@
             </h3>
             <div class="subheading mb-3">Bachelor</div>
             <div>Computer Systems and Networks</div>
-            <p>...</p>
+            <p>Information Technology</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Tbilisi Georgia<br>September 2000 - May 2005</span>
+            <span class="text-primary">Tbilisi Georgia,<br>September 2000 - May 2005</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Casino Aragvi Training Schoole</h3>
+            <h3 class="mb-0">Casino Aragvi Training School</h3>
             <div class="subheading mb-3">Skills in dealing Roulette, Black Jack, Poker and other games
+            </div>
+            <p></p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Tbilisi Georgia, <br>March 2003 - June 2003</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Rivers Casino Training School</h3>
+            <div class="subheading mb-3">Skills in dealing Craps, Pai Go, and Mini Baccarat
             </div>
             <p></p>
           </div>
@@ -221,27 +233,9 @@
           <li class="list-inline-item">
             <i></i>
           </li>
-          <li class="list-inline-item">
-            <i></i>
-          </li>
-          <li class="list-inline-item">
-            <i></i>
-          </li>
-          <li class="list-inline-item">
-            <i></i>
-          </li>
-          <li class="list-inline-item">
-            <i></i>
-          </li>
-          <li class="list-inline-item">
-            <i></i>
-          </li>
-          <li class="list-inline-item">
-            <i></i>
-          </li>
         </ul>
 
-        <div class="subheading mb-3">Main Casino Carnival Games</div>
+        <div class="subheading mb-3">And other Main Casino Carnival Games</div>
         
       </div>
     </section>
@@ -260,7 +254,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5">Certificates</h2>
         <div class="row">
           <div class="col-md-12">
         
@@ -305,7 +299,7 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/resume.min.js"></script>
+  <script src="js/resume.js"></script>
 
 </body>
 
