--- a/index.html
+++ b/index.html
@@ -162,6 +162,35 @@
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
 
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Rivers Casino Training School</h3>
+            <div class="subheading mb-3">
+            </div>
+            <p>Skills in dealing Craps, Pai Go, and Mini Baccarat</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Pittsburgh PA, <br>November 2011 - March 2012</span>
+          </div>
+        </div>
+
+        <br>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Casino Aragvi Training School</h3>
+            <div class="subheading mb-3">
+            </div>
+            <p>Skills in dealing Roulette, Black Jack, Poker and other games</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Tbilisi Georgia, <br>March 2003 - June 2003</span>
+          </div>
+        </div>
+
+        <br>
+
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">
@@ -176,29 +205,10 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Casino Aragvi Training School</h3>
-            <div class="subheading mb-3">Skills in dealing Roulette, Black Jack, Poker and other games
-            </div>
-            <p></p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Tbilisi Georgia, <br>March 2003 - June 2003</span>
-          </div>
-        </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Rivers Casino Training School</h3>
-            <div class="subheading mb-3">Skills in dealing Craps, Pai Go, and Mini Baccarat
-            </div>
-            <p></p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Tbilisi Georgia, <br>March 2003 - June 2003</span>
-          </div>
-        </div>
+
+
+
 
       </div>
     </section>
@@ -224,7 +234,7 @@
           </li>
           <br>
           <li class="list-inline-item">
-            <i><img  src="img/Baccarat.png" alt="Baccarat" width="60" height="60"> Baccarat</i>
+            <i><img  src="img/Baccarat.png" alt="Baccarat" width="60" height="60">Mini Baccarat</i>
           </li>
           <br>
           <li class="list-inline-item">
