--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <h3 class="mb-0">TB Floor Supervisor</h3>
             <div class="subheading mb-3">Casino Adjara</div>
             <p>Supervising the following games operation: 
-              Roulette, Black Jack and Poker and other games; Take personal responsibility for creating an atmosphere of luck; Verify all gaming table transactions in supervised area;  Personally responsible for the dealers being upbeat and friendly while also taking responsibility for following dealing procedures and keeping proper game pace; </p>
+              Roulette, Black Jack, Poker and other games; Take personal responsibility for creating an atmosphere of luck; Verify all gaming table transactions in supervised area;  Personally responsible for the dealers being upbeat and friendly while also taking responsibility for following dealing procedures and keeping proper game pace; </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Tbilisi Georgia, <br>February 2007 - May 2008</span>
@@ -145,7 +145,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Table Games Dealer</h3>
             <div class="subheading mb-3">Grand Casino Sakartvelo </div>
-            <p>Dealing Roulette, Black Jack and Poker and other games.</p>
+            <p>Dealing Roulette, Black Jack, and other games.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Tbilisi Georgia, <br>July 2003 - January 2007</span>
@@ -182,7 +182,7 @@
             <h3 class="mb-0">Casino Aragvi Training School</h3>
             <div class="subheading mb-3">
             </div>
-            <p>Skills in dealing Roulette, Black Jack, Poker and other games</p>
+            <p>Skills in dealing Roulette, Black Jack, and other games</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Tbilisi Georgia, <br>March 2003 - June 2003</span>
@@ -234,7 +234,7 @@
           </li>
           <br>
           <li class="list-inline-item">
-            <i><img  src="img/Baccarat.png" alt="Baccarat" width="60" height="60">Mini Baccarat</i>
+            <i><img  src="img/Baccarat.png" alt="Baccarat" width="60" height="60"> Mini Baccarat</i>
           </li>
           <br>
           <li class="list-inline-item">
