--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="telefon"><a href="tel:848-702-4494">848-702-4494</a></div>
           <a href="mailto:mikirtumov@gmail.com">mikirtumov@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am experienced in all casino table games; I started out working as a table games dealer and worked myself up to Pit-Manager position. I have gained eleven years all together in the casino business. I worked in two cities in my native country Republic of Georgia – Tbilisi and Batumi; in United States I worked in River Casino in Pittsburgh, PA. I am very responsible, love what I do, very devoted and motivated. </p>
         <div class="social-icons">
           <!-- <a href="#">
             <i class="fab fa-linkedin-in"></i>
@@ -98,18 +98,15 @@
           <div class="resume-content">
             <h3 class="mb-0">Table Games Dealer</h3>
             <div class="subheading mb-3">Rivers Casino</div>
-            <p>To deliver great customer service by dealing all games, such as Blacckjack, Mini-Bacc, Craps, Roulette in a friendly and helpful manner with an upbeat/positive attitude
-              To assist in training guests not familiar with various table games products. 
-              To demonstrates an effective working knowledge of dealing policies and gaming procedures 
-              To inform Supervisor and/or Manager of unnatural or irregular play and disputes on game 
-              To safeguard casino assets. 
-              To be responsible for the protection and control of the game. 
-              To exchange currency for gaming chips and pay or collect bets according to house rules in an accurate manner. 
-              To advises Floor Supervisor of any disputes or arguments that may arise during the game. 
-              To support and maintain Rivers Casino courtesy guidelines at all times. 
-              To promote outstanding guest relations. 
-              To perform other duties as assigned. 
-              To presents oneself in a polished, professional and service-minded way and encourages others to do the same.
+            <p>Responsible to deliver great customer service by dealing all games, such as Blacckjack, Mini-Bacc, Craps, Roulette and other games in a friendly and helpful manner with an upbeat/positive attitude; Responsible 
+              to assist in training guests not familiar with various table games products. 
+              Responsible to demonstrates an effective working knowledge of dealing policies and gaming procedures, to
+              inform Supervisor and/or Manager of unnatural or irregular play and disputes on game. 
+              To be responsible to safeguard casino assets. To be responsible for the protection and control of the game,
+              exchange currency for gaming chips and pay or collect bets according to house rules in an accurate manner. 
+              Responsible to advise Floor Supervisor of any disputes or arguments that may arise during the game. 
+              Responsible to support and maintain Rivers Casino courtesy guidelines at all times, to promote outstanding guest relations, to perform other duties as assigned. 
+              Responsible to present oneself in a polished, professional and service-minded way and encourages others to do the same.
               </p>
           </div>
           <div class="resume-date text-md-right">
@@ -134,7 +131,7 @@
             <h3 class="mb-0">TB Floor Supervisor</h3>
             <div class="subheading mb-3">Casino Adjara</div>
             <p>Supervising the following games operation: 
-              Roulette, Black Jack, Poker and other games; Take personal responsibility for creating an atmosphere of luck; Verify all gaming table transactions in supervised area;  Personally responsible for the dealers being upbeat and friendly while also taking responsibility for following dealing procedures and keeping proper game pace; </p>
+              Roulette, Black Jack, Poker and other games; Take personal responsibility for creating an atmosphere of luck; Verify all gaming table transactions in supervised area;  Personally responsible for the dealers being upbeat and friendly while also taking responsibility for following dealing procedures and keeping proper game pace.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Tbilisi Georgia, <br>February 2007 - May 2008</span>
@@ -145,7 +142,11 @@
           <div class="resume-content">
             <h3 class="mb-0">Table Games Dealer</h3>
             <div class="subheading mb-3">Grand Casino Sakartvelo </div>
-            <p>Dealing Roulette, Black Jack, and other games.</p>
+            <p>Responsible to deliver great customer service by dealing all games, such as Blacckjack, Roulette and other games in a friendly and helpful manner with an upbeat/positive attitude; Responsible 
+              to assist in training guests not familiar with various table games products. 
+              Responsible to demonstrates an effective working knowledge of dealing policies and gaming procedures, to
+              inform Supervisor and/or Manager of unnatural or irregular play and disputes on game. 
+              Responsible to present professionalism and encourages others to do the same. </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Tbilisi Georgia, <br>July 2003 - January 2007</span>
@@ -245,7 +246,7 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">And other Main Casino Carnival Games</div>
+        <div class="subheading mb-3">I am proficient in dealing all traditional casino games as well as various other casino carnival games.</div>
         
       </div>
     </section>
