--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
           <a href="mailto:mikirtumov@gmail.com">mikirtumov@gmail.com</a>
         </div>
         <p class="lead mb-5">I am experienced in all casino table games; I started out working as a table games dealer and worked myself up to Pit-Manager position. I have gained eleven years all together in the casino business. I worked in two cities in my native country Republic of Georgia – Tbilisi and Batumi; in United States I worked in River Casino in Pittsburgh, PA. I am very responsible, love what I do, very devoted and motivated. </p>
+
+        <p>Languages: English, Russian, Georgian</p>
         <div class="social-icons">
           <!-- <a href="#">
             <i class="fab fa-linkedin-in"></i>
@@ -256,8 +258,10 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p class="interest">Apart from being a web developer, doing web designs, and having interest to new technologies; I also enjoy keeping a healthy lifestyle. </p>
+        <p class="interest">Going to the gym is what I like to do in my free time. Spending time with my kids and family is something I enjoy most. I also like to interact with new people around the world and learn more about other cultures out there.</p>
+
+         
       </div>
     </section>
 
