text error fixt

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Table Games Dealer</h3>
             <div class="subheading mb-3">Rivers Casino</div>
-            <p>Responsible to deliver great customer service by dealing all games, such as Blacckjack, Mini-Bacc, Craps, Roulette and other games in a friendly and helpful manner with an upbeat/positive attitude; Responsible 
+            <p>Responsible to deliver great customer service by dealing all games, such as Black jack, Mini-Bacc, Craps, Roulette and other games in a friendly and helpful manner with an upbeat/positive attitude; Responsible 
               to assist in training guests not familiar with various table games products. 
               Responsible to demonstrates an effective working knowledge of dealing policies and gaming procedures, to
               inform Supervisor and/or Manager of unnatural or irregular play and disputes on game. 
@@ -144,7 +144,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Table Games Dealer</h3>
             <div class="subheading mb-3">Grand Casino Sakartvelo </div>
-            <p>Responsible to deliver great customer service by dealing all games, such as Blacckjack, Roulette and other games in a friendly and helpful manner with an upbeat/positive attitude; Responsible 
+            <p>Responsible to deliver great customer service by dealing all games, such as Black jack, Roulette and other games in a friendly and helpful manner with an upbeat/positive attitude; Responsible 
               to assist in training guests not familiar with various table games products. 
               Responsible to demonstrates an effective working knowledge of dealing policies and gaming procedures, to
               inform Supervisor and/or Manager of unnatural or irregular play and disputes on game. 
