--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Certificates</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="./img/CV Marina Mikirtumov.pdf" target="_blank" download="PDF">PDF</a>
+        </li>
       </ul>
     </div>
   </nav>
