table games frool supervisor

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">TB Floor Supervisor</h3>
+            <h3 class="mb-0">Table Games Floor Supervisor</h3>
             <div class="subheading mb-3">Casino Adjara</div>
             <p>I supervised Roulette, blackJack, poker and other games. The role involved verifying all gaming table transactions in supervised areas, following dealing procedures and keeping proper game pace. I instilled in the dealers the importance of being upbeat and friendly and creating an atmosphere of luck.</p>
           </div>
