--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h1 class="mb-0">Mikirtumov
           <span class="text-primary">Sergo</span>
         </h1>
-        <div class="subheading mb-5">14 Stratford Apartments #7, NJ 08857
+        <div class="subheading mb-5">1350 N Town Center Dr #1037,Las Vegas NV 89144
           <div class="telefon"><a href="tel:848-702-4494">848-702-4494</a></div>
           <span class="text-lowercase"><a href="mailto:mikirtumov@gmail.com">mikirtumov@gmail.com</a></span>
         </div>
